jwt token, reading certificates

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pegasus_admin
 
+spring.datasource.username=kts
+spring.datasource.password=kts.nvt17
+
+server.port = ${PORT:8080}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+jks.store=src/main/resources/static/jks/testStore.jks
+jks.password=12345
