--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 jks.store=src/main/resources/static/jks/testStore.jks
 jks.password=12345
+
+admin.store=src/main/resources/static/super_cert/super_admin.jks
+admin.password=vukovic
