--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -14,3 +14,5 @@ jks.password=12345
 
 admin.store=src/main/resources/static/super_cert/super_admin.jks
 admin.password=vukovic
+
+certificate.duration = 2
