authorization, loginattempt, model changed, certificate extensions

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -16,3 +16,18 @@ admin.store=src/main/resources/static/super_cert/super_admin.jks
 admin.password=vukovic
 
 certificate.duration = 2
+
+
+
+
+
+
+
+
+
+#MAIL
+spring.mail.host = smtp.gmail.com
+spring.mail.username = mrs.isa2020@gmail.com
+spring.mail.password = mrs_isa2017.
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
