Https: Front->Back DONE!!!

--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -10,6 +10,20 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=src/main/resources/server.pfx
+# The password used to generate the certificate
+server.ssl.key-store-password=vukovic
+server.ssl.enabled=true
+security.require-ssl=true
+
+#trust store location
+trust.store=src/main/resources/server.pfx
+#trust store password
+trust.store.password=vukovic
+
 #MAIL
 spring.mail.host = smtp.gmail.com
 spring.mail.username = mrs.isa2020@gmail.com
