--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -9,6 +9,20 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=src/main/resources/server_admin.pfx
+# The password used to generate the certificate
+server.ssl.key-store-password=vukovic
+server.ssl.enabled=true
+security.require-ssl=true
+
+#trust store location
+trust.store=src/main/resources/server_admin.pfx
+#trust store password
+trust.store.password=vukovic
+
 jks.store=src/main/resources/static/jks/testStore.jks
 jks.password=12345
 
