--- a/FE/admin-fe/angular.json
+++ b/FE/admin-fe/angular.json
@@ -62,7 +62,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "admin-fe:build"
+            "browserTarget": "admin-fe:build",
+            "sslKey": "./server_admin.key",
+            "sslCert": "./server_admin.crt"
           },
           "configurations": {
             "production": {
