--- a/FE/hospital-app/angular.json
+++ b/FE/hospital-app/angular.json
@@ -63,7 +63,9 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "port": 4201,
-            "browserTarget": "hospital-app:build"
+            "browserTarget": "hospital-app:build",
+            "sslKey": "./server.key",
+            "sslCert": "./server.crt"
           },
           "configurations": {
             "production": {
