Https: Back-Back -> DONE!!!

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -12,19 +12,19 @@ spring.jpa.hibernate.ddl-auto=update
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=src/main/resources/server_admin.pfx
+server.ssl.key-store=src/main/resources/certificates/server_admin.pfx
 # The password used to generate the certificate
 server.ssl.key-store-password=vukovic
 server.ssl.enabled=true
 security.require-ssl=true
 
 #trust store location
-trust.store=src/main/resources/server_admin.pfx
+trust.store=src/main/resources/certificates/server_admin.pfx
 #trust store password
 trust.store.password=vukovic
 
 jks.store=src/main/resources/static/jks/testStore.jks
-jks.password=12345
+jks.password=vukovic
 
 admin.store=src/main/resources/static/super_cert/super_admin.jks
 admin.password=vukovic
