encrypted communication between apps

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -23,6 +23,8 @@ trust.store=src/main/resources/certificates/server_admin.pfx
 #trust store password
 trust.store.password=vukovic
 
+bob.store=src/main/resources/public_keys/server.crt
+
 jks.store=src/main/resources/static/jks/testStore.jks
 jks.password=vukovic
 
