--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -19,10 +19,14 @@ server.ssl.key-store-password=vukovic
 server.ssl.enabled=true
 security.require-ssl=true
 
+bob.store =src/main/resources/public_keys/server_admin.crt
+
 #trust store location
 trust.store=src/main/resources/certificate/server.pfx
 #trust store password
 trust.store.password=vukovic
+
+cipherKey=itqB&JYGNou2%Z&J
 
 #MAIL
 spring.mail.host = smtp.gmail.com
