Backend validation for admin app

--- a/BE/admin-app/pom.xml
+++ b/BE/admin-app/pom.xml
@@ -98,6 +98,14 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.68</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+		
 
 	</dependencies>
 	<build>
