Hospital app truststore

--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -18,6 +18,8 @@ server.ssl.key-store=src/main/resources/certificate/server.pfx
 server.ssl.key-store-password=vukovic
 server.ssl.enabled=true
 security.require-ssl=true
+server.ssl.trust-store=src/main/resources/static/jks/truststore.jks
+server.ssl.trust-store-password=vukovic
 
 bob.store =src/main/resources/public_keys/server_admin.crt
 
