--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -20,6 +20,8 @@ server.ssl.enabled=true
 security.require-ssl=true
 server.ssl.trust-store=src/main/resources/static/jks/truststore.jks
 server.ssl.trust-store-password=vukovic
+server.ssl.trust-store-type=JKS
+server.ssl.client-auth=need
 
 bob.store =src/main/resources/public_keys/server_admin.crt
 
