--- a/BE/admin-app/pom.xml
+++ b/BE/admin-app/pom.xml
@@ -105,6 +105,14 @@
 		    <artifactId>validation-api</artifactId>
 		    <version>2.0.1.Final</version>
 		</dependency>
+
+
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.5.13</version>
+	</dependency>
+		
 		
 
 	</dependencies>
