admin-app logging

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -35,11 +35,7 @@ certificate.duration = 2
 
 cipherKey=pgzB&AWENsh9%Z&J
 
-
-
-
-
-
+#logging.config = src/main/resources/log4j2.xml
 
 #MAIL
 spring.mail.host = smtp.gmail.com
