--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -23,7 +23,10 @@ server.ssl.trust-store-password=vukovic
 server.ssl.trust-store-type=JKS
 server.ssl.client-auth=need
 
-bob.store =src/main/resources/public_keys/server_admin.crt
+bob.store=src/main/resources/public_keys/server_admin.crt
+
+#devices
+blood.cert=src/main/resources/public_keys/blood_device.crt
 
 #trust store location
 trust.store=src/main/resources/certificate/server.pfx
