certificate chain added for blood_device

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -18,6 +18,11 @@ server.ssl.key-store-password=vukovic
 server.ssl.enabled=true
 security.require-ssl=true
 
+server.ssl.trust-store=src/main/resources/static/jks/truststore.jks
+server.ssl.trust-store-password=vukovic
+server.ssl.trust-store-type=JKS
+server.ssl.client-auth=want
+
 #trust store location
 trust.store=src/main/resources/certificates/server_admin.pfx
 #trust store password
