--- a/BE/hospitalapp/pom.xml
+++ b/BE/hospitalapp/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
