--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -27,6 +27,7 @@ bob.store=src/main/resources/public_keys/server_admin.crt
 
 #devices
 blood.cert=src/main/resources/public_keys/blood_device.crt
+heart.cert=src/main/resources/public_keys/heart_monitor.crt
 
 #trust store location
 trust.store=src/main/resources/certificate/server.pfx
