--- a/FE/hospital-app/package.json
+++ b/FE/hospital-app/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "net": "^1.0.2",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
