--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pegasus_admin
 spring.datasource.username=kts
 spring.datasource.password=kts.nvt17
 
+spring.data.mongodb.uri=mongodb+srv://kts:kts.nvt17@cluster-vukovic.ssf51.mongodb.net/pegasus_ms?retryWrites=true&w=majority
+
 server.port = ${PORT:8080}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
