--- a/FE/admin-fe/package.json
+++ b/FE/admin-fe/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "net": "^1.0.2",
     "rxjs": "~6.6.0",
+    "sockjs": "^0.3.21",
     "stompjs": "^2.3.3",
     "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
@@ -33,6 +35,8 @@
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
