--- a/FE/admin-fe/package.json
+++ b/FE/admin-fe/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "~11.0.1",
     "net": "^1.0.2",
     "rxjs": "~6.6.0",
-    "sockjs": "^0.3.21",
+    "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
