--- a/FE/hospital-app/package.json
+++ b/FE/hospital-app/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "chart.js": "^3.3.2",
+    "crypto-js": "^4.0.0",
     "net": "^1.0.2",
     "rxjs": "~6.6.0",
     "sockjs-client": "^1.4.0",
